# obsidian-mcp

./: .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
docs/: index.html
obsidian_mcp/: __init__.py  server.py
