[project]
name = "obsidian-mcp"
version = "0.2.0"
description = "MCP server giving Claude Code read/write access to Obsidian vaults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Benjamin Daniels", email = "bbdaniels@gmail.com"}
]
keywords = ["mcp", "obsidian", "claude", "ai", "notes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/bbdaniels/obsidian-mcp"
Repository = "https://github.com/bbdaniels/obsidian-mcp"
Issues = "https://github.com/bbdaniels/obsidian-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["obsidian_mcp"]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"
